# HPDSCS

高性能分布式社交聊天系统/: DATABASE_STRUCTURE_GUIDE.md  FILE_CLEANUP_USAGE_GUIDE.md  GROUP_CHAT_IMPLEMENTATION_SUMMARY.md  JOIN_GROUP_IMPLEMENTATION_SUMMARY.md  ONE_TO_ONE_CHAT_PROCESS.md  PRIVATE_CHAT_HISTORY_IMPLEMENTATION.md  create_complete_database.bat  create_complete_database.sh
高性能分布式社交聊天系统/Service/: BREAKPOINT_RESUME_IMPLEMENTATION.md  CHUNKED_DOWNLOAD_IMPLEMENTATION.md  CLUSTER_ANALYSIS_REPORT.md  CMakeLists.txt  CONCURRENT_FILE_TRANSFER.md  CREATE_GROUP_FLOWCHART.md  FILE_CHUNK_TRANSFER_FLOW.md  FILE_TRANSFER_PROTOCOL_GUIDE.md  FRIEND_PROTOCOL_TEST_GUIDE.md  GROUP_CHAT_FLOWCHART.md  JOIN_GROUP_FLOWCHART.md  MESSAGE_TYPES_INTEGRATION.md  PROTOBUF_USAGE.md  RESUMABLE_FILE_TRANSFER.md
高性能分布式社交聊天系统/Service/SQL/: complete_database_tables.sql  create_file_tables.sql
高性能分布式社交聊天系统/Service/config/: cluster.conf  distributed_services.json  file_cleanup.conf
高性能分布式社交聊天系统/Service/include/: message.pb.h  public.hpp
高性能分布式社交聊天系统/Service/include/client/: ClientFileChunkHelper.hpp
高性能分布式社交聊天系统/Service/nginx/: nginx.conf
高性能分布式社交聊天系统/Service/proto/: chat_services.proto  message.proto
高性能分布式社交聊天系统/Service/scripts/: cluster_status.sh  file_cleanup.sh  start_cluster.sh  start_distributed_services.bat  start_distributed_services.sh  stop_cluster.sh
高性能分布式社交聊天系统/Service/src/client/: CMakeLists.txt  ClientFileChunkHelper.cpp  ClientFileChunkHelper_new.cpp  ClientFileHandlers.cpp  ClientLocationHandlers.cpp  main.cpp  protobuf_chat_client.cpp  protobuf_client.cpp
(+50 files in other folders)
